Added vendors folder and animation using wow.js

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/media/fav/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/vendors/wow/animate.css">
     <title>SassPik - Software, App, SaaS landing HTML Template</title>
 </head>
 <body>
     <!--NAV-BER AREA-->
-    <header>
-        <div class="container">
-            <div class="row">
+    <header >
+        <div class="container wow fadeInDown">
+            <div class="row" >
                 <div class="col">
                     <div class="logo">
                         <a href="#">
@@ -61,8 +62,8 @@
     <section class="banner-area" id="banner-area">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <div class="banner-content">
+                <div class="col ">
+                    <div class="banner-content wow slideInLeft">
                         <h2>The best <span>SaaSpik</span> design 2019</h2>
                         <p class="description">Our design projects are fresh and simple and will benefit yourbusiness greatly. Learn more about our work!</p>
                         <div class="newsletter">
@@ -71,7 +72,7 @@
                                 <a href="#" class="btn">Get Started</a>
                             </form>
                         </div>
-                        <div class="video-btn">
+                        <div class="video-btn ">
                             <a href="#">
                                 <i class="fas fa-play"></i>
                                 <p class="description">Watch Video</p>
@@ -80,7 +81,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="promo-mockup">
+                    <div class="promo-mockup wow slideInRight">
                         <img src="assets/media/banner/mobile.png" alt="">
                     </div>
                 </div>
@@ -93,9 +94,9 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h2 class="section-title">Why small business owners <br> Love SaaS<span>pik.</span></h2>
+                    <h2 class="section-title wow fadeInUp">Why small business owners <br> Love SaaS<span>pik.</span></h2>
                     <div class="features">
-                        <div class="feature-item">
+                        <div class="feature-item wow slideInLeft">
                             <div class="feature-icon">
                                 <i class="fas fa-rocket"></i>
                             </div>
@@ -105,7 +106,7 @@
                                 <a href="#" class="">Find out More <i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
-                        <div class="feature-item">
+                        <div class="feature-item wow slideInDown">
                             <div class="feature-icon">
                                 <i class="fas fa-bell"></i>
                             </div>
@@ -115,7 +116,7 @@
                                 <a href="#" class="">Find out More <i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
-                        <div class="feature-item">
+                        <div class="feature-item wow slideInRight">
                             <div class="feature-icon">
                                 <i class="fas fa-mobile-alt"></i>
                             </div>
@@ -137,13 +138,13 @@
                     <h2 class="section-title">Use your android or ios device <br> to manage everything.</h2>
                     <div class="smart-device-features-content">
                         <div class="col">
-                            <div class="smart-feature-image">
+                            <div class="smart-feature-image wow slideInLeft">
                                 <img src="assets/media/feature/tablet.png" alt="">
                             </div>
                         </div>
                         <div class="col">
-                            <div class="smart-features">
-                                <div class="smart-features-item">
+                            <div class="smart-features wow fadeInUp">
+                                <div class="smart-features-item ">
                                     <div class="smart-feature-img">
                                         <img src="assets/media/feature/22.png" alt="">
                                     </div>
@@ -188,7 +189,7 @@
         <div class="container">
             <div class="row interface-1">
                 <div class="col">
-                    <div class="interface-content">
+                    <div class="interface-content wow fadeInUp">
                         <h2>Super clean user <br> interface for easier use.</h2>
                         <p>Lost the plot cracking goal give us a bell is bog horse play knackered lemon squeezy, cup of char cack bleeder matie boy he lost his bottle.!</p>
                         <ul class="interface-features">
@@ -200,7 +201,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="interface-images">
+                    <div class="interface-images wow slideInRight">
                         <div class="interface-img-one">
                             <img src="assets/media/feature/27.png" alt="">
                         </div>
@@ -213,7 +214,7 @@
 
             <div class="row interface-2">
                 <div class="col">
-                    <div class="interface-images">
+                    <div class="interface-images wow slideInLeft">
                         <div class="interface-img-one">
                             <img src="assets/media/feature/28.png" alt="">
                         </div>
@@ -223,7 +224,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="interface-content">
+                    <div class="interface-content wow fadeInUp">
                         <h2>Super clean user <br> interface for easier use.</h2>
                         <p>Lost the plot cracking goal give us a bell is bog horse play knackered lemon squeezy, cup of char cack bleeder matie boy he lost his bottle.!</p>
                         <ul class="interface-features">
@@ -241,15 +242,15 @@
     <!--SIGNUP AREA START-->
     <section class="sign-up" id="sign-up">
         <div class="container">
-            <div class="row">
+            <div class="row ">
                 <div class="col">
-                    <div class="signup-content">
+                    <div class="signup-content wow zoomIn">
                         <h2 class="section-title">Start managing your <br> SaaSpik. bettet</h2>
                         <p class="description">try any products free for 30 days</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="signup-btn">
+                    <div class="signup-btn wow slideInRight">
                         <a href="#" class="btn">SignUp for free</a>
                     </div>
                 </div>
@@ -262,7 +263,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="app-content">
+                    <div class="app-content wow slideInLeft">
                         <h2>Available for your <br> smart phone.</h2>
                         <p>All the power of niche in your pocket. Schedule, publish and monitir your accounts with ease.</p>
                         <div class="app-download-btn">
@@ -272,7 +273,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="app-image">
+                    <div class="app-image wow slideInRight">
                         <div class="app-image-one">
                             <img src="assets/media/download/1.png" alt="">
                         </div>
@@ -290,9 +291,9 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h2 class="section-title">Saw likeness from years bring <br> fifth from, and every life.</h2>
+                    <h2 class="section-title wow fadeInUp">Saw likeness from years bring <br> fifth from, and every life.</h2>
                     <div class="all-blogs">
-                        <div class="blog-single">
+                        <div class="blog-single wow slideInLeft">
                             <div class="featured-image">
                                 <img src="assets/media/blog/23.jpg" alt="">
                             </div>
@@ -309,7 +310,7 @@
                                 <a href="#" class="btn">Read More</a>
                             </div>
                         </div>
-                        <div class="blog-single">
+                        <div class="blog-single wow slideInRight">
                             <div class="featured-image">
                                 <img src="assets/media/blog/24.jpg" alt="">
                             </div>
@@ -336,7 +337,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col wow slideInRight">
                     <div class="footer-top">
                         <div class="footer-items">
                             <h3>Company</h3>
@@ -394,6 +395,7 @@
 
     <!-- SCRIPTS-->
     <script src="https://kit.fontawesome.com/ebff302bd8.js" crossorigin="anonymous"></script>
+    <script src="assets/vendors/wow/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
