jQuery cdn link, Sticky header and bottom-to-top button added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <a href="#" class="">Find out More <i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
-                        <div class="feature-item wow slideInDown">
+                        <div class="feature-item wow fadeInUp">
                             <div class="feature-icon">
                                 <i class="fas fa-bell"></i>
                             </div>
@@ -333,6 +333,9 @@
         </div>
     </section>
     <!--BLOG AREA END-->
+    <div class="go-top">
+        <i class="fas fa-arrow-up go-to-top"></i>
+    </div>
     <!--FOOTER AREA -->
     <footer>
         <div class="container">
@@ -395,6 +398,7 @@
 
     <!-- SCRIPTS-->
     <script src="https://kit.fontawesome.com/ebff302bd8.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/wow/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
